Agregar Vista Facturar

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -125,7 +125,8 @@
         </nav>
     </div>
     <main class="cuerpo">
-        <app-ventas></app-ventas>                   
+        <!--<app-ventas></app-ventas> -->
+        <app-facturar-ventas></app-facturar-ventas>
     </main>
 </div>
 
