--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -31,8 +31,8 @@ body {
 
 .cuerpo{
     grid-area: b;
-    display: inline;
-    margin: 25px;
+    display: inline;    
+    margin: 25px 25px 25px -60px;
 }
 
 @media (max-width: 767.98px) {
