--- a/src/app/ventas/ventas.component.html
+++ b/src/app/ventas/ventas.component.html
@@ -1,3 +1,35 @@
 <div>
-    Tod exelente Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus explicabo laudantium aperiam esse totam fugiat pariatur ducimus commodi, eum tempore maiores repellat laboriosam temporibus nesciunt aliquam voluptates fugit magni corrupti?
+    <h2>Visualizar</h2>
+</div>
+<div>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
 </div>
