--- a/src/app/facturar-ventas/facturar-ventas.component.html
+++ b/src/app/facturar-ventas/facturar-ventas.component.html
@@ -1,120 +1,121 @@
 
-
 <div>
     <form action="">
-        <div>
+        <div class="id-fecha">
             <div class="id">
-                <label class="visually-hidden">ID usuario</label>
+                <label class="visually-hidden label">ID usuario</label>
                 <input type="number" 
                     id="id_factu" 
                     name = "id_factu"
-                    class="form-control" 
+                    class="form-control input" 
                     placeholder="Id" 
                 />
             </div>
             <div class="fecha">
-                <label class="visually-hidden">Fecha</label>
-                <p>Aqui va un selector de fecha</p>
+                <label class="visually-hidden label">Fecha</label>
+                <p class="input">Aqui va un selector de fecha</p>
             </div>
         </div>   
         <div class="cliente">
             <h3>Cliente</h3>
-            <div>
-                <button>Buscar</button>
+            <div class="buscar">
+                <button class="btn">Buscar</button>
                 <input type="text" 
                     id="fac-cliente" 
                     name = "fac-cliente"
-                    class="form-control" 
+                    class="form-control input-btn" 
                     placeholder="Cliente" 
                 />
             </div>
-            <div>
-                <label class="visually-hidden">Cedula</label>
+            <div class="ingresos">
+                <label class="visually-hidden lb-a">Cedula</label>
                 <input type="number" 
                     id="cedula_factu" 
                     name = "cedula_factu"
-                    class="form-control" 
+                    class="form-control ip-a" 
                     placeholder="Cedula" 
                 />
-                <label class="visually-hidden">Nombre</label>
+                <label class="visually-hidden lb-b">Nombre</label>
                 <input type="text" 
                     id="nombre_factu" 
                     name = "nombre_factu"
-                    class="form-control" 
+                    class="form-control ip-b" 
                     placeholder="Nombre" 
                 />
-                <label class="visually-hidden">Ciudad</label>
+                <label class="visually-hidden lb-c">Ciudad</label>
                 <input type="text" 
                     id="ciudad_factu" 
                     name = "ciudad_factu"
-                    class="form-control" 
+                    class="form-control ip-c" 
                     placeholder="Ciudad" 
                 />
-                <label class="visually-hidden">Dirección</label>
+                <label class="visually-hidden lb-d">Dirección</label>
                 <input type="text" 
                     id="direcc_factu" 
                     name = "direcc_factu"
-                    class="form-control" 
+                    class="form-control ip-d" 
                     placeholder="Dirección" 
                 />
-                <label class="visually-hidden">Teléfono</label>
+                <label class="visually-hidden lb-e">Teléfono</label>
                 <input type="number" 
                     id="telf_factu" 
                     name = "telf_factu"
-                    class="form-control" 
+                    class="form-control ip-e" 
                     placeholder="Teléfono" 
                 />
             </div>
         </div>
         <div class="camaron">
             <h3>Camarón</h3>
-            <div>
-                <button>Buscar</button>
+            <div class="buscar">
+                <button class="btn">Buscar</button>
                 <input type="text" 
                     id="fac-camaron" 
                     name = "fac-camaron"
-                    class="form-control" 
+                    class="form-control input-btn" 
                     placeholder="Camaron" 
                 />
+            </div >
+            <div class="ingresos">
+                <label class="visually-hidden lb-a">Talla</label>
+                <input type="number" 
+                    id="talla_factu" 
+                    name = "talla_factu"
+                    class="form-control ip-a" 
+                    placeholder="Talla" 
+                />
+                <label class="visually-hidden lb-d">Peso</label>
+                <input type="text" 
+                    id="peso_factu" 
+                    name = "peso_factu"
+                    class="form-control ip-d" 
+                    placeholder="Peso" 
+                />
             </div>
-            <label class="visually-hidden">Talla</label>
-            <input type="number" 
-                id="talla_factu" 
-                name = "talla_factu"
-                class="form-control" 
-                placeholder="Talla" 
-            />
-            <label class="visually-hidden">Peso</label>
-            <input type="text" 
-                id="peso_factu" 
-                name = "peso_factu"
-                class="form-control" 
-                placeholder="Peso" 
-            />
         </div>
-        <div class="datosFin">
-            <label class="visually-hidden">Precio</label>
+        <div class="datosFin ingresos">
+            <label class="visually-hidden lb-a">Precio</label>
             <input type="number" 
                 id="precio_factu" 
                 name = "precio_factu"
-                class="form-control" 
+                class="form-control ip-a" 
                 placeholder="Precio" 
             />
-            <label class="visually-hidden">IVA</label>
+            <label class="visually-hidden lb-b">IVA</label>
             <input type="number" 
                 id="iva_factu" 
                 name = "iva_factu"
-                class="form-control" 
+                class="form-control ip-b" 
                 placeholder="IVA" 
             />
-            <label class="visually-hidden">Total</label>
+            <label class="visually-hidden lb-c">Total</label>
             <input type="number" 
                 id="total_factu" 
                 name = "total_factu"
-                class="form-control" 
+                class="form-control ip-c" 
                 placeholder="Total" 
             />
-            <button class="w-100 btn btn-lg btn-primary" 
+            <button class="w-100 btn btn-lg btn-primary lb-e" 
             type="submit">
                 Registrar
             </button>
