Usar grid para estructura de Ingreso Cliente

--- a/src/app/ingreso-cliente/ingreso-cliente.component.html
+++ b/src/app/ingreso-cliente/ingreso-cliente.component.html
@@ -1,1 +1,62 @@
-<p>ingreso-cliente works!</p>
+
+<div>
+    <form action="">
+        <div class="cliente">
+            <h3>Cliente</h3>
+            <div class="ingresos">
+                <div class="cl-a struc">
+                    <label class="visually-hidden lb">Cedula</label>
+                    <input type="number" 
+                        id="cedula_clien" 
+                        name = "cedula_factu"
+                        class="form-control ip" 
+                        placeholder="Cedula" 
+                    />
+                </div>
+                <div class="cl-b struc">
+                    <label class="visually-hidden lb">Nombre</label>
+                    <input type="text" 
+                            id="nombre_factu" 
+                            name = "nombre_factu"
+                            class="form-control ip" 
+                            placeholder="Nombre" 
+                        />
+                </div>
+                <div class="cl-c struc">
+                    <label class="visually-hidden lb">Ciudad</label>
+                    <input type="text" 
+                        id="ciudad_factu" 
+                        name = "ciudad_factu"
+                        class="form-control ip" 
+                        placeholder="Ciudad" 
+                    />
+                </div>  
+                <div class="cl-d struc">
+                    <label class="visually-hidden lb">Dirección</label>
+                    <input type="text" 
+                        id="direcc_factu" 
+                        name = "direcc_factu"
+                        class="form-control ip" 
+                        placeholder="Dirección" 
+                    />
+                </div>
+                <div class="cl-e struc">
+                    <label class="visually-hidden lb">Teléfono</label>
+                    <input type="number" 
+                        id="telf_factu" 
+                        name = "telf_factu"
+                        class="form-control ip" 
+                        placeholder="Teléfono" 
+                    />
+                </div>  
+                <div class="btn-cliente f">
+                    <button class="w-100 btn btn-lg btn-primary btn" 
+                    type="submit">
+                        Registrar
+                    </button> 
+                </div>
+            </div>
+        </div>  
+    </form>
+</div>
+ 
