--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -126,7 +126,8 @@
     </div>
     <main class="cuerpo">
         <!--<app-ventas></app-ventas> -->
-        <app-facturar-ventas></app-facturar-ventas>
+        <!--<app-facturar-ventas></app-facturar-ventas>-->
+        <app-ingreso-cliente></app-ingreso-cliente>
     </main>
 </div>
 
