Agregar y Estructura de Visualizar inventario

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -127,7 +127,8 @@
     <main class="cuerpo">
         <!--<app-ventas></app-ventas> -->
         <!--<app-facturar-ventas></app-facturar-ventas>-->
-        <app-ingreso-cliente></app-ingreso-cliente>
+        <!--<app-ingreso-cliente></app-ingreso-cliente>-->
+        <app-visualizar-inventario></app-visualizar-inventario>
     </main>
 </div>
 
