Agregar y Estructura de Ingreso Proveedor

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -128,7 +128,8 @@
         <!--<app-ventas></app-ventas> -->
         <!--<app-facturar-ventas></app-facturar-ventas>-->
         <!--<app-ingreso-cliente></app-ingreso-cliente>-->
-        <app-visualizar-inventario></app-visualizar-inventario>
+        <!--<app-visualizar-inventario></app-visualizar-inventario>-->
+        <app-ingreso-proveedor></app-ingreso-proveedor>
     </main>
 </div>
 
