Agregar Producto anterior

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -129,7 +129,8 @@
         <!--<app-facturar-ventas></app-facturar-ventas>-->
         <!--<app-ingreso-cliente></app-ingreso-cliente>-->
         <!--<app-visualizar-inventario></app-visualizar-inventario>-->
-        <app-ingreso-proveedor></app-ingreso-proveedor>
+        <!--<app-ingreso-proveedor></app-ingreso-proveedor>-->
+        <app-ingreso-producto></app-ingreso-producto>
     </main>
 </div>
 
