Agregar y Estructura de Ingreso Gasto

--- a/src/app/ingreso-gasto/ingreso-gasto.component.html
+++ b/src/app/ingreso-gasto/ingreso-gasto.component.html
@@ -1,1 +1,96 @@
-<p>ingreso-gasto works!</p>
+
+<div>
+    <form action="">
+        <div class="proveedor">
+            <h3>Gastos</h3>
+            <div class="ingresos">
+                <div>
+                    <div class="cl-a struc">
+                        <label class="visually-hidden lb">ID</label>
+                        <input type="text" 
+                                id="id_gasto" 
+                                name = "id_gasto"
+                                class="form-control ip" 
+                                placeholder="Nombre" 
+                        />
+                    </div>
+                    <div class="cl-b ingre">
+                        <div class="a">
+                            <h3>Proveedor</h3>
+                            <div class="cl-a struc">
+                                <button class="lb">Buscar</button>
+                                <input type="number" 
+                                    id="ruc_pro_gasto" 
+                                    name = "ruc_pro_gasto"
+                                    class="form-control ip" 
+                                    placeholder="RUC" 
+                                />
+                            </div>
+                            <div class="cl-b struc">
+                                <label class="visually-hidden lb">Nombre</label>
+                                <input type="text" 
+                                        id="nombre_pro_gasto" 
+                                        name = "nombre_pro_gasto"
+                                        class="form-control ip" 
+                                        placeholder="Nombre" 
+                                    />
+                            </div>
+                        </div>
+                        <div class="b">
+                            <h3>Producto</h3>
+                            <div class="cl-a struc">
+                                <button class="lb">Buscar</button>
+                                <input type="number" 
+                                    id="ruc_pro_gasto" 
+                                    name = "ruc_pro_gasto"
+                                    class="form-control ip" 
+                                    placeholder="RUC" 
+                                />
+                            </div>
+                            <div class="cl-b struc">
+                                <label class="visually-hidden lb">Nombre</label>
+                                <input type="text" 
+                                        id="nombre_pro_gasto" 
+                                        name = "nombre_pro_gasto"
+                                        class="form-control ip" 
+                                        placeholder="Nombre" 
+                                    />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cl-c struc">
+                        <label class="visually-hidden lb">Descripción</label>
+                        <input type="text" 
+                                id="desc_gasto" 
+                                name = "desc_gasto"
+                                class="form-control ip" 
+                                placeholder="Descripción" 
+                        />
+                    </div>
+                    <div class="cl-d ingre">
+                        <div class="a struc">
+                            <label class="visually-hidden lb">Cantidad</label>
+                            <input type="text" 
+                                    id="cantidad_gasto" 
+                                    name = "cantidad_gasto"
+                                    class="form-control ip" 
+                                    placeholder="Cantidad" 
+                            />
+                        </div>
+                        <div class="b struc">
+                            <label class="visually-hidden lb">Monto</label>
+                            <input type="text" 
+                                    id="monto_pro_gasto" 
+                                    name = "monto_pro_gasto"
+                                    class="form-control ip" 
+                                    placeholder="Monto" 
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+
+
