--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -130,7 +130,8 @@
         <!--<app-ingreso-cliente></app-ingreso-cliente>-->
         <!--<app-visualizar-inventario></app-visualizar-inventario>-->
         <!--<app-ingreso-proveedor></app-ingreso-proveedor>-->
-        <app-ingreso-producto></app-ingreso-producto>
+        <!--<app-ingreso-producto></app-ingreso-producto>-->
+        <app-ingreso-gasto></app-ingreso-gasto>
     </main>
 </div>
 
