--- a/src/app/ventas/ventas.component.html
+++ b/src/app/ventas/ventas.component.html
@@ -5,31 +5,19 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">ID</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Precio Camarón</th>
+            <th scope="col">Precio Final</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <tr *ngFor = "let factura of listFacturas">
+            <th scope="row">{{factura.factura_id}}</th>
+            <td>{{factura.factura_fecha}}</td>
+            <td>{{factura.factura_precio_camaron}}</td>
+            <td>{{factura.factura_precio_final}}</td>
+          </tr>    
         </tbody>
       </table>
 </div>
